--- a/communities/supplementary-files/layouts.less
+++ b/communities/supplementary-files/layouts.less
@@ -19,7 +19,7 @@
 }
 
 html, body, form:first-child {
-  height: 100%;
+  min-height: 100%;
   .content-fragment-page {
     min-height: 75%;
   }
@@ -96,9 +96,9 @@ html, body, form:first-child {
 
 .single-column {
   .content-fragment {
-    .content-fragment-content {
+    /*.content-fragment-content {
       margin-top: @spacing;
-    }
+    }*/
 
     ~ .content-fragment, &.featured-content-slider, &.navigation-custom {
       .content-fragment-content {
@@ -278,7 +278,8 @@ html, body, form:first-child {
     padding: 0 0 @spacing 0;
     font-size: 1.2 * @font-size;
     -webkit-font-smoothing: antialiased;
-    color: lighten(@color-foreground, 25%);
+    /*color: lighten(@color-foreground, 25%);*/
+    color: @color-foreground;
     font-weight: 600; //@font-weight-display-heavy;
   }
   &.with-header {
@@ -299,7 +300,7 @@ html, body, form:first-child {
 
 .footer-fragments {
   min-height: 100px;
-  border-top: 1px solid darken(@color-background, 10%);
+  border-top: 1px solid #aaa;
   > .layout {
     .width;
   }
