--- a/communities/supplementary-files/widgets.less
+++ b/communities/supplementary-files/widgets.less
@@ -1,12 +1,12 @@
 .content-fragment {
-  font-family: @font-family-body;
+  /*font-family: @font-family-body;*/
   font-weight: @font-weight-body;
 }
 
 .content-fragment.create-status {
   margin-top: 9px;
   fieldset {
-    margin: 0px;
+    margin: 0;
   }
   input {
     width: 96%;
@@ -63,7 +63,7 @@
 .content-fragment.site-banner {
   .banner.site .navigation-list ul a.read-queue-count {
     position: absolute;
-    top: 0px;
+    top: 0;
     right: -5px;
     color: #fff;
     border-radius: 3px;
@@ -159,7 +159,7 @@
     height: 70px;
     position: absolute;
     overflow: hidden;
-    top: 0px;
+    top: 0;
     > div {
       width: 74px;
       margin: 0 8px;
@@ -201,13 +201,13 @@
   .internal-link.comment {
     .prepend_icon(@comment, 12px);
     &:before {
-      top: 0px;
+      top: 0;
     }
   }
   .internal-link .post-date {
     .prepend_icon(@clock, 12px);
     &:before {
-      top: 0px;
+      top: 0;
     }
   }
   .activity-date-grouping {
@@ -268,7 +268,7 @@
     font-size: @font-size * .8;
   }
   .navigation-list {
-    left: 0px;
+    left: 0;
     span.date {
       margin: 0 (@spacing * 2) 0 0;
       color: darken(@color-chrome, 15%);
@@ -339,12 +339,12 @@
     .like-count {
       margin: 0 (@spacing) 0 0;
       &:before {
-        top: 0px;
+        top: 0;
       }
     }
   }
   .content-list.comments {
-    margin-top: 0px;
+    margin-top: 0;
     line-height: @font-size * 1.1;
     .content-item.action,
     .content-item.comment {
@@ -354,7 +354,7 @@
       padding: (@spacing / 1.5) 0 (@spacing / 1.5) 0;
       display: block;
       overflow: hidden;
-      border: 0px;
+      border: 0;
       .hyphenate;
       &.highlight {
         border-left: 1px solid @color-accent !important;
@@ -400,7 +400,7 @@
         }
       }
       .navigation-list {
-        left: 0px;
+        left: 0;
       }
       .navigation-item {
         font-size: @font-size * .85;
@@ -411,7 +411,7 @@
         }
       }
       &.comment-form {
-        padding: 0px;
+        padding: 0;
         margin: @spacing 0 0 0;
         fieldset .field-list .field-item .field-item-input {
           margin-top: 0;
@@ -499,7 +499,7 @@
   background-color: @color-background;
   color: @color-foreground;
   padding: (@spacing * 2);
-  box-shadow: 0px 0px (@spacing * 4) rgba(0, 0, 0, 0.6);
+  box-shadow: 0 0 (@spacing * 4) rgba(0, 0, 0, 0.6);
   width: 400px;
   font-family: @font-family-body;
   font-size: @font-size;
@@ -537,7 +537,7 @@
   }
   .tourtip-actions {
     list-style: none;
-    padding: 0px;
+    padding: 0;
     width: 100%;
     margin: (@spacing * 2) 0 0 0;
     a {
@@ -623,7 +623,7 @@
     position: relative;
   }
   h2 {
-    margin: 0px;
+    margin: 0;
     font-size: @font-size * 1;
     font-size: @font-size * .9;
     font-weight: bold;
@@ -728,7 +728,7 @@
   font-family: @font-family-body;
   font-weight: @font-weight-body;
   .arrow {
-    height: 0px;
+    height: 0;
     position: relative;
     top: @spacing * 2;
     &:after {
@@ -806,7 +806,7 @@
     margin: @spacing * 2;
     .round(4px);
     overflow: hidden;
-    .box-shadow(0px 0px (@spacing * 2) 0px rgba(0, 0, 0, .5));
+    .box-shadow(0px 0 (@spacing * 2) 0 rgba(0, 0, 0, .5));
     a {
     }
   }
@@ -827,15 +827,15 @@
     width: 250px;
     background-color: darken(@color-background, 3%);
     padding: @spacing;
-    margin-bottom: 0px;
+    margin-bottom: 0;
     li {
       padding-bottom: (@spacing / 2);
       border-bottom: 1px solid darken(@color-background, 10%);
       margin-bottom: (@spacing / 2);
       &:last-child {
-        padding-bottom: 0px;
-        border-bottom: 0px;
-        margin-bottom: 0px;
+        padding-bottom: 0;
+        border-bottom: 0;
+        margin-bottom: 0;
       }
     }
   }
@@ -966,7 +966,7 @@
   fieldset {
     clear: both;
     width: 100%;
-    border-top: 0px solid @color-chrome;
+    border-top: 0 solid @color-chrome;
     padding-top: @spacing;
     .advanced-reply {
       float: right;
@@ -1122,10 +1122,10 @@
 .content-fragment.conversation-banner,
 .scrolled .content-fragment.conversation-banner {
   .banner.context {
-    padding-left: 0px;
+    padding-left: 0;
     .name {
       width: 230px;
-      margin-left: 0px;
+      margin-left: 0;
       position: relative;
       line-height: 44px;
       font-weight: normal;
@@ -1149,7 +1149,7 @@
       }
       .new {
         position: absolute;
-        right: 0px;
+        right: 0;
         .banner_button;
       }
     }
@@ -1219,7 +1219,7 @@
     .layout-region-inner .content-fragment.conversation-list,
     .layout-region-inner .content-fragment.conversation, {
       .content-fragment-content {
-        margin-top: 0px;
+        margin-top: 0;
       }
     }
   }
@@ -1291,9 +1291,9 @@
   height: @featured-content-slider-default-height;
 
   .content-fragment-content {
-    left: 0px;
+    left: 0;
     width: 100%;
-    border-bottom: 1px solid darken(@color-background, 10%);
+    /*border-bottom: 1px solid darken(@color-background, 10%);*/
     .featured-content-slider {
       max-width: @max-width;
       margin-left: auto;
@@ -1369,6 +1369,8 @@
           padding: 0;
           height: 100%;
           position: relative;
+          background-color: #fff !important;
+          border-bottom: 0 solid transparent;
           > .avatar-container {
             width: 100%;
             overflow: hidden;
@@ -1385,8 +1387,8 @@
                   &:after {
                     content: ' ';
                     position: absolute;
-                    top: 0px;
-                    left: 0px;
+                    top: 0;
+                    left: 0;
                     width: 1040px;
                     height: @featured-content-slider-default-height;
                     z-index: 1;
@@ -1451,9 +1453,9 @@
           }
           .shadowed {
             .name {
-              text-shadow: 0px 0px (@spacing * 2) rgba(0, 0, 0, .8);
+              text-shadow: 0 0 (@spacing * 2) rgba(0, 0, 0, .8);
               a {
-                text-shadow: 0px 0px (@spacing * 2) rgba(0, 0, 0, .8);
+                text-shadow: 0 0 (@spacing * 2) rgba(0, 0, 0, .8);
               }
             }
             .name {
@@ -1487,7 +1489,7 @@
     .content-fragment-content {
       width: 100%;
       position: static;
-      border-bottom: 0px;
+      border-bottom: 0;
       .featured-content-slider {
         .content-list-wrapper {
           height: 230px;
@@ -1496,9 +1498,9 @@
         margin-right: auto;
         min-width: 0 !important;
         max-width: 100% !important;
-        padding-left: 0px !important;
-        padding-right: 0px !important;
-        border-bottom: 0px;
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+        border-bottom: 0;
       }
     }
 
@@ -1586,7 +1588,7 @@
       }
     }
     &:first-child {
-      margin-top: 0px;
+      margin-top: 0;
     }
   }
 }
@@ -1598,8 +1600,8 @@
   position: absolute;
   overflow: hidden;
   background-color: @color-background;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   list-style: none;
   z-index: 10;
   border: 1px solid @color-chrome;
@@ -1618,13 +1620,13 @@
       padding: @spacing @spacing @spacing @spacing;
     }
 
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     .content-item.suggestion {
 
       overflow: hidden;
       .avatar {
-        top: 0px;
+        top: 0;
         img {
           max-width: 44px !important;
           max-height: 44px !important;
@@ -1636,7 +1638,7 @@
       }
       .abbreviated {
         .author {
-          padding-top: 0px;
+          padding-top: 0;
           a {
             color: @color-foreground;
           }
@@ -1647,7 +1649,7 @@
           font-size: .9 * @font-size;
         }
         .content:not(:empty) {
-          padding-top: 0px;
+          padding-top: 0;
           max-width: 70%;
         }
       }
@@ -1668,7 +1670,7 @@
             &:before {
               color: @color-chrome;
               width: 10px;
-              margin-right: 0px;
+              margin-right: 0;
             }
           }
         }
@@ -1687,7 +1689,7 @@
         }
         .abbreviated {
           .author {
-            padding-top: 0px;
+            padding-top: 0;
             a {
               color: @color-background;
             }
@@ -1806,8 +1808,8 @@
         line-height: 44px;
         height: 44px;
         padding: 0 @spacing 0 @spacing;
-        border: 0px;
-        margin-right: 0px;
+        border: 0;
+        margin-right: 0;
         color: lighten(@color-foreground, 15%);
         font-weight: normal;
         font-size: @font-size * .9;
@@ -1830,7 +1832,7 @@
         }
       }
       li:first-child a {
-        padding-left: 0px;
+        padding-left: 0;
       }
     }
   }
@@ -1841,7 +1843,7 @@
     height: 44px;
     .content-fragment-content {
       position: absolute;
-      left: 0px;
+      left: 0;
       width: 100%;
       border-bottom: 1px solid darken(@color-background, 10%);
       .navigation-list {
@@ -1911,14 +1913,14 @@
 .content-fragment.notification-list {
   .content-item {
     padding: (@spacing / 2) @spacing @spacing 50px !important;
-    border-top: 0px;
+    border-top: 0;
     border-bottom: 1px solid lighten(@color-chrome, 15%);
     cursor: pointer;
     position: relative;
     min-height: 51px;
     overflow: hidden;
     &:last-child {
-      border-bottom: 0px;
+      border-bottom: 0;
     }
     &.no-author {
       padding-left: 7px;
@@ -1950,8 +1952,8 @@
       }
     }
     .post-date {
-      padding: 0px;
-      margin: 0px 10px 0px 0px;
+      padding: 0;
+      margin: 0 10px 0 0;
       float: left;
       line-height: 1.3em;
       font-size: @font-size * .8;
@@ -1973,7 +1975,7 @@ li.activity-story.content-type-293f75d1-2a3e-43ed-9173-af885c593139 {
     left: -65px;
   }
   .navigation-list[data-direction='horizontal'] a {
-    padding-left: 0px;
+    padding-left: 0;
     padding-right: 20px;
   }
   .post-actions.activity {
@@ -1996,7 +1998,7 @@ li.activity-story.content-type-293f75d1-2a3e-43ed-9173-af885c593139 {
     .post-thumbnail img {
       border-radius: 2px;
       position: absolute;
-      left: 0px;
+      left: 0;
       top: 3px;
     }
   }
@@ -2016,10 +2018,10 @@ li.activity-story.content-type-293f75d1-2a3e-43ed-9173-af885c593139 {
     ul {
       li {
         a {
-          padding: 0px;
-          border: 0px;
+          padding: 0;
+          border: 0;
           font-size: .9 * @font-size;
-          color: lighten(@color-foreground, 35%);
+          color: @color-foreground;
           margin-right: 2 * @spacing;
           background-color: transparent;
           &:hover {
@@ -2032,8 +2034,8 @@ li.activity-story.content-type-293f75d1-2a3e-43ed-9173-af885c593139 {
           }
           &.selected::before {
             content: " ";
-            width: 0px;
-            height: 0px;
+            width: 0;
+            height: 0;
             border-style: solid;
             border-width: 0 10px 10px 10px;
             border-color: Transparent Transparent @color-background Transparent;
@@ -2044,8 +2046,8 @@ li.activity-story.content-type-293f75d1-2a3e-43ed-9173-af885c593139 {
           }
           &.selected::after {
             content: " ";
-            width: 0px;
-            height: 0px;
+            width: 0;
+            height: 0;
             border-style: solid;
             border-width: 0 10px 10px 10px;
             border-color: Transparent Transparent @color-chrome Transparent;
@@ -2140,7 +2142,7 @@ li.activity-story.content-type-293f75d1-2a3e-43ed-9173-af885c593139 {
       float: left;
       border: 1px solid lighten(@color-chrome, 10%);
       border-radius: 3px;
-      top: 0px;
+      top: 0;
       position: relative;
       padding-left: @spacing;
       min-height: @line-height * 1.2;
@@ -2255,7 +2257,7 @@ li.activity-story.content-type-293f75d1-2a3e-43ed-9173-af885c593139 {
       &:-ms-input-placeholder {
         color: lighten(@color-foreground, 40%);
       }
-      border: 0px;
+      border: 0;
       border-bottom: 1px solid @color-chrome;
       font-family: @font-family-body;
       font-size: .9 * @font-size;
@@ -2783,7 +2785,7 @@ div.event_calendar_content {
 
 div.event_calendar_content table {
   text-align: left;
-  margin: 0px auto;
+  margin: 0 auto;
 }
 
 div.event_calendar_content table tbody.month_cells {
@@ -2902,7 +2904,7 @@ div.month_wrapper a.prev_link:hover {
 
 div.month_wrapper a.prev_link {
   position: absolute;
-  left: 0px;
+  left: 0;
   display: inline-block;
   width: 20px;
 }
@@ -2923,7 +2925,7 @@ div.month_wrapper a.prev_link:before {
 }
 
 div.event_calendar_content table {
-  padding: 0px 5px 0 5px;
+  padding: 0 5px 0 5px;
   border-collapse: collapse;
 }
 
@@ -3031,7 +3033,7 @@ div.event-calendar-modal .content-list .content-item {
   margin: @spacing/1.5 0;
   color: #AAA;
   &:last-child {
-    border-bottom: 0px;
+    border-bottom: 0;
   }
   .content.abbreviated {
     h3.name {
@@ -3067,7 +3069,7 @@ div.event-calendar-modal .content-list .content-item {
         padding: 0;
         &:last-child {
           .content.abbreviated {
-            border-bottom: 0px;
+            border-bottom: 0;
           }
         }
         .content.abbreviated {
@@ -3118,7 +3120,7 @@ div.event-calendar-modal .content-list .content-item {
 }
 
 .content-fragment.calendar-list-fragment .abbreviated-post {
-  padding: 0px 0 10px 60px;
+  padding: 0 0 10px 60px;
 }
 
 .content-fragment.event-widget .event-links {
@@ -3147,12 +3149,12 @@ div.event-calendar-modal .content-list .content-item {
   line-height: 44px;
   height: 44px;
   padding: 0 30px 0 30px;
-  border: 0px;
+  border: 0;
   border-radius: 3px;
   display: inline-block;
   background-color: #0099dc;
   color: white;
-  font-family: 'Open Sans', 'Helvetica', Arial, sans-serif;
+  font-family: @font-family-body;
   font-size: 16px;
   margin-right: 10px;
   -webkit-transition: background-color 0.15s;
@@ -3181,20 +3183,20 @@ div.event-calendar-modal .content-list .content-item {
 }
 
 .content-fragment.event-widget .external-preview .abbreviated-post .post-summary {
-  margin-bottom: 0px;
+  margin-bottom: 0;
   font-size: 12.8px;
   line-height: 1.4em;
 }
 
 .content-fragment.event-widget .external-preview .abbreviated-post h4 {
-  border-bottom: 0px;
-  padding-left: 0px;
+  border-bottom: 0;
+  padding-left: 0;
   font-size: 1.0em;
-  margin-bottom: 0px;
+  margin-bottom: 0;
 }
 
 .content-fragment.event-widget .external-preview .abbreviated-post .post-name a {
-  font-family: 'Source Sans Pro', 'Helvetica', Arial, sans-serif;
+  font-family: @font-family-body;
   font-size: 13.6px;
   font-weight: normal !important;
 }
@@ -3367,11 +3369,11 @@ span.who-is-coming, span.remaining-users {
   .content.full .actions.header .navigation-list-item {
     float: right;
     > span {
-      padding-right: 0px;
+      padding-right: 0;
     }
     a {
-      padding-right: 0px;
-      margin-right: 0px;
+      padding-right: 0;
+      margin-right: 0;
     }
   }
   .content.full .author {
@@ -3398,7 +3400,7 @@ span.who-is-coming, span.remaining-users {
   .content.full .actions .navigation-list-item.like > span,
   .content.full .actions .navigation-list-item.like > a {
     .like-on, .like-off {
-      padding-right: 0px !important;
+      padding-right: 0 !important;
       //padding-right: 20px;
     }
   }
@@ -3408,25 +3410,25 @@ span.who-is-coming, span.remaining-users {
       border-bottom: 1px solid lighten(@color-chrome, 15%);
     }
     .content.full .actions {
-      border: 0px;
+      border: 0;
     }
     .content.full .actions.footer {
       height: 45px;
       background-color: lighten(@color-chrome, 25%);
-      padding: 10px 10px 0px 10px !important;
+      padding: 10px 10px 0 10px !important;
     }
   }
   fieldset {
     background-color: #fff;
 
     .field-list .field-item .field-item-input {
-      margin: 0px;
+      margin: 0;
     }
 
     .field-list .field-item {
-      margin: 0px 0 8px 0;
+      margin: 0 0 8px 0;
       &:last-child {
-        margin: 0px 0 0px 0;
+        margin: 0 0 0 0;
       }
     }
   }
@@ -3483,11 +3485,11 @@ span.who-is-coming, span.remaining-users {
   }
   .content.full .actions.footer .navigation-list-item a {
     display: inline-block;
-    padding: 5px 15px 5px 0px !important;
+    padding: 5px 15px 5px 0 !important;
   }
   .content.full .actions.footer .navigation-list-item.rating a {
     display: inline-block;
-    padding: 5px 0px 5px 0px !important;
+    padding: 5px 0 5px 0 !important;
   }
   .advanced-reply {
     font-size: @font-size - 1;
@@ -3497,15 +3499,15 @@ span.who-is-coming, span.remaining-users {
   }
   .content .actions.footer {
     background-color: transparent;
-    padding: 0px !important;
+    padding: 0 !important;
     width: 100%;
   }
   .content.full .actions {
-    border-top: 0px;
+    border-top: 0;
   }
   .content.full .author,
   .content.full .actions {
-    border-top: 0px;
+    border-top: 0;
     background-color: transparent;
   }
   .content.full {
@@ -3513,7 +3515,7 @@ span.who-is-coming, span.remaining-users {
       border-bottom: 1px solid lighten(@color-chrome, 15%);
       padding-bottom: @spacing;
       p:last-of-type {
-        margin-bottom: 0px;
+        margin-bottom: 0;
       }
     }
   }
@@ -3524,19 +3526,19 @@ span.who-is-coming, span.remaining-users {
     > div {
       > .content.full {
         .author {
-          margin: 0px;
+          margin: 0;
           padding-left: 50px !important;
           .avatar {
-            left: 0px;
+            left: 0;
           }
           height: 42px;
-          padding-bottom: 0px !important;
+          padding-bottom: 0 !important;
         }
         .thread-date {
           float: right;
           padding-top: 18px;
           font-size: @font-size - 1;
-          right: 0px;
+          right: 0;
         }
       }
     }
@@ -3601,7 +3603,7 @@ span.who-is-coming, span.remaining-users {
     .attribute-list {
       .attribute-item {
         &.author {
-          border-bottom: 0px;
+          border-bottom: 0;
         }
         &.vote {
 
