--- a/static/bootstrap/widgets/_fat-tabs.scss
+++ b/static/bootstrap/widgets/_fat-tabs.scss
@@ -154,12 +154,14 @@
 }
 
 /*align all h4s*/
-.IM img {
-  margin-top: 7px;
-}
+@if ($domain == "dsg") {
+  .IM img {
+    margin-top: 7px;
+  }
 
-.PM img {
-  margin-bottom: 39px;
+  .PM img {
+    margin-bottom: 39px;
+  }
 }
 
 /*mobile*/
@@ -281,7 +283,9 @@
         }
       }
       &.PM img {
-        margin-bottom: 28px;
+        @if ($domain == "dsg") {
+          margin-bottom: 28px;
+        }
       }
     }
   }
