Removed extra space below the Performance Monitoring tab's icon Also, removed height value to make it look likes the other icons...
Change-Id: I5cd002aec3dd05f45a1440ec41611a9d0b0c767a

--- a/static/bootstrap/widgets/_fat-tabs.scss
+++ b/static/bootstrap/widgets/_fat-tabs.scss
@@ -154,12 +154,14 @@
 }
 
 /*align all h4s*/
-.IM img {
-  margin-top: 7px;
-}
+@if ($domain == "dsg") {
+  .IM img {
+    margin-top: 7px;
+  }
 
-.PM img {
-  margin-bottom: 39px;
+  .PM img {
+    margin-bottom: 39px;
+  }
 }
 
 /*mobile*/
@@ -280,8 +282,10 @@
           margin-top: 0;
         }
       }
-      &.PM img {
-        margin-bottom: 28px;
+      @if ($domain == "dsg") {
+      	&.PM img {
+          margin-bottom: 28px;
+      	}
       }
     }
   }
